--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,11 @@ spring.datasource.username=root
 spring.datasource.password=steven16
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=cafeclinica7@gmail.com
+spring.mail.password=bouz lglp dtjq lerv
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=true
+jwt.secret=secretsecretsecretsecretsecretsecretsecretsecret
